--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,6 @@
 services:
   postgres:
-    image: postgres:17-alpine
-    container_name: taskmanager_db
+    image: postgres:15-alpine
     environment:
       POSTGRES_DB: task_manager
       POSTGRES_USER: task_user
@@ -11,11 +10,27 @@ services:
     ports:
       - "5432:5432"
     networks:
-      - taskmanager_network
+      - task-manager-network
+
+  app:
+    build: .
+    environment:
+      DB_HOST: postgres
+      DB_PORT: 5432
+      DB_USER: task_user
+      DB_PASSWORD: task_password
+      DB_NAME: task_manager
+      SSL_MODE: disable
+    ports:
+      - "8080:8080"
+    depends_on:
+      - postgres
+    networks:
+      - task-manager-network
 
 volumes:
   postgres_data:
 
 networks:
-  taskmanager_network:
+  task-manager-network:
     driver: bridge
